# DumbConnect4

./: CMakeLists.txt  main.cpp
connect4/: Connect4Game.cpp  Connect4Game.h
console/: ConsoleGame.cpp  ConsoleGame.h
widgetapp/: WidgetApp.cpp  WidgetApp.h  WidgetGame.cpp  WidgetGame.h  cMain.cpp  cMain.h
